tests/restrict-tenant-route-hostnames/platform-author/values.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
namespaceSelector:
  - name: wedding-app
    labels:
      app.kubernetes.io/managed-by: ksail
